# ml4em

./: .dockerignore  .gitignore  .gitmodules  404.html  Dockerfile  Makefile  README.md  config.example.yaml  environment-cpu.yml  environment-gpu.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docker.yml  docs.yml
api/config/: index.html
api/constants/: index.html
api/data/: index.html
api/features/: index.html
api/inference/: index.html
api/models/: index.html
api/training/: index.html
api/types/: index.html
apptainer-deployment/: index.html
architecture/design-principles/: index.html
architecture/overview/: index.html
architecture/periodfind/: index.html
background/: index.html
background/dmdt/: index.html
background/docker-ghcr/: index.html
background/gaia/: index.html
background/light-curves/: index.html
background/period-finding/: index.html
background/periodfind/: index.html
background/surveys/: index.html
background/variability-statistics/: index.html
conda-deployment/: index.html
data-contracts/: index.html
deployment/: index.html
deployment/docker/: index.html
deployment/ghcr/: index.html
deployment/hpc/: index.html
docs/: apptainer-deployment.md  conda-deployment.md  data-contracts.md  deployment.md  index.md  installation.md  quickstart.md
docs/api/: config.md  constants.md  data.md  features.md  inference.md  models.md  training.md  types.md
docs/architecture/: design-principles.md  overview.md  periodfind.md
docs/background/: dmdt.md  docker-ghcr.md  gaia.md  index.md  light-curves.md  period-finding.md  periodfind.md  surveys.md  variability-statistics.md
docs/deployment/: docker.md  ghcr.md  hpc.md
docs/guides/: add-data-source.md  add-extractor.md  add-model.md  label-preparation.md
docs/javascripts/: architecture.js
docs/layers/: data.md  features.md  foundation.md  inference.md  models.md  training.md
guides/add-data-source/: index.html
guides/add-extractor/: index.html
guides/add-model/: index.html
guides/label-preparation/: index.html
installation/: index.html
layers/data/: index.html
layers/features/: index.html
layers/foundation/: index.html
layers/inference/: index.html
layers/models/: index.html
layers/training/: index.html
quickstart/: index.html
scripts/: benchmark_batch.py  benchmark_single.py  get_credentials.py  run_demo.py  setup_conda.sh
search/: search_index.json
site/: 404.html  objects.inv  sitemap.xml
site/background/: index.html
slurm/: benchmark.sh  pull_image.sh  run_demo.sh  run_demo_conda.sh  setup_conda.sh
src/ml4em/: __init__.py  (+2 more)
stylesheets/: architecture.css  extra.css
tests/: conftest.py
(+54 files in other folders)
