[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml4em"
version = "0.1.0"
description = "Machine learning for EM light curve analysis — White Dwarf Binary detection"
requires-python = ">=3.11"

# Foundation only. Every other layer is opt-in via extras.
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Data sources
ztf      = ["penquins>=2.4.0"]
rubin    = ["pyvo>=1.5", "pyarrow>=12.0"]

# Feature extraction
features = [
    "astropy>=5.2",
    "scipy>=1.11",
    "numba>=0.58",
    "fast-histogram>=0.11",
]

# ML
training  = ["torch>=2.0", "scikit-learn>=1.3"]
inference = ["torch>=2.0"]

# Development
dev = ["pytest>=7.4", "pytest-cov>=4.0", "ruff>=0.4"]

all = ["ml4em[ztf,rubin,features,training,inference,dev]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length    = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ml4em"]
