[build-system]
# periodfind requires a two-step build (Rust → Cython) that cannot be driven
# by pip alone.  See Dockerfile for the full build sequence:
#   1. cd external/periodfind/rust && maturin build --release && pip install ...
#   2. pip install external/periodfind
#   3. pip install -e .
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml4em"
version = "0.1.0"
description = "Machine learning for EM light curve analysis — White Dwarf Binary detection"
requires-python = ">=3.11"

# periodfind is a hard dependency — feature extraction cannot run without it.
# It must be built from source via the Dockerfile before installing ml4em.
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "periodfind",
]

[project.optional-dependencies]
# Data sources
ztf   = ["penquins>=2.4.0"]
rubin = ["pyvo>=1.5", "pyarrow>=12.0"]

# Gaia catalog cross-match (catalog.py only — not needed for core features)
catalog = ["astropy>=5.2"]

# ML
training  = ["torch>=2.0", "scikit-learn>=1.3"]
inference = ["torch>=2.0"]

# Development
dev = ["pytest>=7.4", "pytest-cov>=4.0", "ruff>=0.4"]

all = ["ml4em[ztf,rubin,catalog,training,inference,dev]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length    = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ml4em"]
